<resources>
    <string name="app_name">TestTask</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_with_apple">Sign in with Apple</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="chane_photo">Change photo</string>
    <string name="balance_dollars">$1593</string>
    <string name="title">Trade by bata</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="location">Location</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="view_all">View all</string>
</resources>