<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:textSize="38sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:layout_marginVertical="18dp"
            android:textAlignment="center"
            android:background="@drawable/round_corners_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:layout_marginVertical="18dp"
            android:gravity="center_horizontal"
            android:background="@drawable/round_corners_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:layout_marginVertical="18dp"
            android:gravity="center_horizontal"
            android:background="@drawable/round_corners_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_marginTop="18dp"
            app:backgroundTint="@color/button"
            android:background="@drawable/round_corners_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/log_in_text_view"
                android:text="@string/log_in"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="4dp"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/sign_google_cont"
                android:layout_marginVertical="36dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/google"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:text="@string/sign_google"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_apple_cont"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/apple"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:text="@string/sign_with_apple"
                    android:textColor="@color/black"
                    android:paddingHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</FrameLayout>