<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/welcome_back"
            android:layout_gravity="center_horizontal"
            android:textSize="38sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:layout_marginVertical="18dp"
            android:textAlignment="center"
            android:background="@drawable/round_corners_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="51dp">

            <EditText
                android:id="@+id/password_edit_text"
                android:paddingVertical="4dp"
                android:paddingHorizontal="8dp"
                android:gravity="center"
                android:hint="@string/password"
                android:layout_marginVertical="18dp"
                android:background="@drawable/round_corners_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="64dp"
            app:backgroundTint="@color/button"
            android:background="@drawable/round_corners_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>