<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:src="@drawable/left_arrow"
        android:layout_margin="12dp"
        android:layout_width="36dp"
        android:layout_height="36dp" />

    <LinearLayout
        android:paddingTop="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/profile"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="14dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="100dp"
            android:layout_marginBottom="6dp"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/photo_profile_image"
                android:src="@drawable/profile_photo"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/change_photo_text_view"
            android:layout_gravity="center_horizontal"
            android:text="@string/chane_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:text="@string/profile_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_item_button"
            android:layout_marginTop="12dp"
            android:text="@string/upload_item"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_file_upload_24"
            app:iconGravity="textStart"
            android:textAlignment="center"
            android:layout_marginHorizontal="48dp"
            app:backgroundTint="@color/button"
            android:background="@drawable/round_corners_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.factor.bouncy.BouncyRecyclerView
            android:id="@+id/profile_recycler_view"
            tools:itemCount="7"
            tools:listitem="@layout/profile_list_item_with_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>