<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="100dp"
                android:layout_width="40dp"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/photo_profile_image"
                    android:src="@drawable/profile_photo"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/location"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_marginHorizontal="48dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/what_are_you_looking_for"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:background="@drawable/round_corners_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.factor.bouncy.BouncyRecyclerView
        android:id="@+id/categories_recycler_view"
        android:paddingVertical="12dp"
        android:orientation="horizontal"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="6"
        tools:listitem="@layout/categories_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>